RESOLVED FIXED116971
[GTK][WK2] rowAtIndex is not implemented in DRT/WKTR
https://bugs.webkit.org/show_bug.cgi?id=116971
Summary [GTK][WK2] rowAtIndex is not implemented in DRT/WKTR
Zan Dobersek
Reported 2013-05-29 10:16:07 PDT
The accessibility/poorly-formed-aria-table.html layout test is failing on GTK WK2. http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=accessibility%2Fpoorly-formed-aria-table.html --- /home/zan/Dev/webkit/webkit/WebKitBuild/Release/layout-test-results/accessibility/poorly-formed-aria-table-expected.txt +++ /home/zan/Dev/webkit/webkit/WebKitBuild/Release/layout-test-results/accessibility/poorly-formed-aria-table-actual.txt @@ -3,8 +3,8 @@ On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". -PASS grid.rowAtIndex(0).isEqual(row1) is true -PASS grid.rowAtIndex(1).isEqual(row2) is true +FAIL grid.rowAtIndex(0).isEqual(row1) should be true. Threw exception TypeError: 'null' is not an object (evaluating 'grid.rowAtIndex(0).isEqual') +FAIL grid.rowAtIndex(1).isEqual(row2) should be true. Threw exception TypeError: 'null' is not an object (evaluating 'grid.rowAtIndex(1).isEqual') PASS grid.rowCount is 2 PASS successfullyParsed is true
Attachments
Patch (6.88 KB, patch)
2015-05-11 18:31 PDT, Joanmarie Diggs
no flags
Mario Sanchez Prada
Comment 1 2013-12-17 05:21:03 PST
As part of my work in bug 125854, I found that the true reason for this is actually that rowAtIndex() is not implemented, and that the reason why this was not failing in WK1 is because DRT was always returning valid AccessibilityUIElements for every member in the a11y hierarchy, no matter they are exposed through ATK or not (they would wrap null pointers instead of valid AtkObjects if that's the case) So, now renaming the bug and moving the expectation to gtk/TestExpectations.
Mario Sanchez Prada
Comment 2 2013-12-17 05:27:17 PST
Mario Sanchez Prada
Comment 3 2013-12-17 06:13:32 PST
I resolved this bug by mistake with webkit-patch. No reopening...
Joanmarie Diggs
Comment 4 2015-05-11 18:31:43 PDT
chris fleizach
Comment 5 2015-05-11 22:30:46 PDT
Comment on attachment 252918 [details] Patch seems like a good idea
WebKit Commit Bot
Comment 6 2015-05-12 05:01:13 PDT
Comment on attachment 252918 [details] Patch Clearing flags on attachment: 252918 Committed r184198: <http://trac.webkit.org/changeset/184198>
WebKit Commit Bot
Comment 7 2015-05-12 05:01:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.